Fixed z-index for album delete button

--- a/durandal02/css/themes/mocks.css
+++ b/durandal02/css/themes/mocks.css
@@ -2837,7 +2837,7 @@ background:transparent url(../images/tutorial/control_left.jpg) no-repeat 0 0;
 .mediafile .dbtn {
     position: absolute;
     display: none;
-    z-index: 100;
+    z-index: 1000;
     top: 10px;
     right: 8px;
     height: 39px;
